# mdp-project

./: .gitignore  Makefile  README.md  main.ipynb  main.py  pyproject.toml
.github/: action-shame.yaml
output/: quantity-mapper.py  quantity-reducer.py  sorter-mapper.py  sorter-reducer.py  user-mapper.py  user-reducer.py
src/exceptions/: data.py
src/lib/: data.py  utils.py
src/mappers/: __init__.py  abstracts.py  count.py  quantity.py  user.py
src/reducers/: __init__.py  abstracts.py  count.py  quantity.py  user.py
src/schemas/: data.py
tests/mappers/: test_quantity.py  test_user.py
tests/reducers/: test_quantity.py  test_user.py
