[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Keviinplz <kevin.pinochet@ug.uchile.cl>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
notebook = "^6.4.12"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
black = "^22.3.0"
mypy = "^0.961"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
